se mejora vista

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
             android:layout_height="93dp"
             android:id="@+id/textTitle"
             android:textAlignment="center"
+            app:fontFamily="@font/robotobold"
             android:layout_marginTop="32dp"
             android:textSize="@dimen/text_size_ultralarge"
             android:textColor="@color/colorPrimaryBlue"
@@ -40,7 +41,7 @@
                 android:layout_marginTop="32dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Spring tension"
+                android:text="@string/spring_tension"
                 android:textSize="@dimen/text_size_medium"
                 android:padding="@dimen/padding_default"
                 android:layout_marginBottom="15dp"
@@ -56,7 +57,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Spring friction"
+                android:text="@string/spring_friction"
                 android:textSize="@dimen/text_size_medium"
                 android:padding="@dimen/padding_default"
                 android:textAlignment="center"
@@ -74,11 +75,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/button"
-                android:text="Iniciar flotante"
+                android:text="@string/iniciar_flotante"
                 android:layout_centerInParent="true"
                 android:backgroundTint="@color/colorPrimaryBlueDark"
                 android:textColor="@android:color/white"
-                android:fontFamily="@font/robotomedium"
+                app:fontFamily="@font/robotomedium"
                 android:layout_marginTop="64dp"
                 android:layout_marginRight="64dp"
                 android:layout_marginLeft="64dp"
