se agrega evento para capturar pantalla

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ffdd35</color>
-    <color name="colorPrimaryDark">#003da5</color>
+    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#ffc72c</color>
     <color name="colorPrimaryLight">#fce385</color>
     <color name="colorPrimaryBlue">#003da5</color>
