--- a/app/src/main/res/layout/bubble_layout.xml
+++ b/app/src/main/res/layout/bubble_layout.xml
@@ -9,7 +9,7 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/avatar"
-            android:src="@drawable/ic_launcher_foreground"
+            android:src="@drawable/conbote"
             android:layout_width="70dp"
             android:layout_height="70dp"
             app:civ_border_color="#FFF"
